--- a/Practica/Views/ConceptosPago/Delete.cshtml
+++ b/Practica/Views/ConceptosPago/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model Practica.Models.Usuario
+﻿@model Practica.Models.ConceptosPago
 
 @{
     ViewBag.Title = "Delete";
@@ -8,25 +8,32 @@
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>Usuario</h4>
+    <h4>ConceptosPago</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.Nombre_usuario)
+            @Html.DisplayNameFor(model => model.Concepto)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Nombre_usuario)
+            @Html.DisplayFor(model => model.Concepto)
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.Contraseña)
+            @Html.DisplayNameFor(model => model.Descripcion)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Contraseña)
+            @Html.DisplayFor(model => model.Descripcion)
         </dd>
-         
+
+        <dt>
+            @Html.DisplayNameFor(model => model.Tipo)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Tipo)
+        </dd>
 
     </dl>
 
