--- a/Practica/Views/Facturas/Details.cshtml
+++ b/Practica/Views/Facturas/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model Practica.Models.Usuario
+﻿@model Practica.Models.Factura
 
 @{
     ViewBag.Title = "Details";
@@ -7,25 +7,26 @@
 <h2>Details</h2>
 
 <div>
-    <h4>Usuario</h4>
+    <h4>Factura</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.Nombre_usuario)
+            @Html.DisplayNameFor(model => model.Pedido.Concepto)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Nombre_usuario)
+            @Html.DisplayFor(model => model.Pedido.Concepto)
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.Contraseña)
+            @Html.DisplayNameFor(model => model.Fecha)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Contraseña)
+            @Html.DisplayFor(model => model.Fecha)
         </dd>
-         
+
+
     </dl>
 </div>
 <p>
