--- a/Practica/Views/Usuarios/InicioSesion.cshtml
+++ b/Practica/Views/Usuarios/InicioSesion.cshtml
@@ -1,28 +1,46 @@
 ﻿@model Practica.Models.Usuario
 @{
     ViewBag.Title = "Inicio de sesión";
+    Layout = "~/Views/Shared/InicioSesion_layout.cshtml";
 }
+<style>
 
-<h2>Login</h2>
-<div class="row">
-    <div class="col-md-8">
-        @using (Html.BeginForm("Details", "Usuarios", "", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
-        {
-            @Html.AntiForgeryToken()
-            @Html.ValidationSummary(false)
-            <div class="form-actions no-color">
-                <div class="form-group">
-                    @Html.TextBoxFor(m => m.Nombre_usuario, new { @placeholder = "Usuario", @class = "form-control" })
-                    @Html.ValidationMessageFor(m => m.Nombre_usuario, "as", new { @class = "text-danger" })
+    .validation-summary-valid {
+        display: none;
+    }
+</style>
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-sm-4 col-sm-offset-4">
+            @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+            <h5>Inicio de sesión</h5>
+            <hr />
+            @using (Html.BeginForm("InicioSesion", "Usuarios", "", FormMethod.Post, new { @class = "form-horizontal" }))
+            {
+                @Html.AntiForgeryToken()
+                <div class="form-actions no-color">
+                    <div class="form-group">
+                        <div class="input-field">
+                            @Html.LabelFor(m => m.Nombre_usuario)
+                            @Html.TextBoxFor(m => m.Nombre_usuario, new { @class = "form-control" })
+                            @Html.ValidationMessageFor(model => model.Nombre_usuario, "", new { @class = "text-danger" })
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <div class="input-field">
+                            @Html.LabelFor(m => m.Contraseña)
+                            @Html.PasswordFor(m => m.Contraseña, new { @class = "form-control" })
+                            @Html.ValidationMessageFor(model => model.Contraseña, "", new { @class = "text-danger" })
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        @Html.ValidationMessage("USUARIO_INC", new { @class = "text-danger"})
+                    </div>
+                    <div class="form-group">
+                        <input type="submit" value="Iniciar sesión" class="btn btn-default" />
+                    </div>
                 </div>
-                <div class="form-group">
-                    @Html.PasswordFor(m => m.Contraseña, new { @placeholder = "Contraseña", @class = "form-control" })
-                    @Html.ValidationMessageFor(m => m.Contraseña, "sa", new { @class = "text-danger" })
-                </div>
-                <div class="form-group">
-                    <input type="submit" value="Iniciar sesión" class="btn btn-default" />
-                </div>
-            </div>
-        }
+            }
+        </div>
     </div>
 </div>
