--- a/Practica/Views/ConceptosPago/Details.cshtml
+++ b/Practica/Views/ConceptosPago/Details.cshtml
@@ -1,10 +1,10 @@
 ﻿@model Practica.Models.ConceptosPago
 
 @{
-    ViewBag.Title = "Details";
+    ViewBag.Title = "Detalles";
 }
 
-<h2>Details</h2>
+<h2>Detalles</h2>
 
 <div>
     <h4>ConceptosPago</h4>
@@ -26,18 +26,10 @@
             @Html.DisplayFor(model => model.Descripcion)
         </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Tipo)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Tipo)
-        </dd>
-
 
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.Identificador }) |
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Modificar", "Edit", new { id = Model.Identificador }) |
+    @Html.ActionLink("Regresar", "Index")
 </p>
