--- a/Practica/Views/Usuarios/Create.cshtml
+++ b/Practica/Views/Usuarios/Create.cshtml
@@ -1,10 +1,10 @@
 ﻿@model Practica.Models.Usuario
 
 @{
-    ViewBag.Title = "Create";
+    ViewBag.Title = "Usuarios";
 }
 
-<h2>Create</h2>
+<h2>Usuario</h2>
 
 @using (Html.BeginForm()) 
 {
@@ -17,7 +17,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Nombre_usuario, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Nombre_usuario, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.Nombre_usuario, new { htmlAttributes = new { @class = "form-control", @autocomplete = "off" } })
                 @Html.ValidationMessageFor(model => model.Nombre_usuario, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -25,19 +25,19 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Contraseña, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Contraseña, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.Contraseña, new { htmlAttributes = new { @class = "form-control", @autocomplete = "off" } })
                 @Html.ValidationMessageFor(model => model.Contraseña, "", new { @class = "text-danger" })
             </div>
         </div>
          
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="submit" value="Guardar" class="btn btn-default" />
             </div>
         </div>
     </div>
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Regresar", "Index")
 </div>
