--- a/Practica/Views/Clientes/Delete.cshtml
+++ b/Practica/Views/Clientes/Delete.cshtml
@@ -50,8 +50,8 @@
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
+            <input type="submit" value="Eliminar" class="btn btn-default" onclick="return confirm('¿Está seguro que desea eliminar este registro?')" /> |
+            @Html.ActionLink("Regresar", "Index")
         </div>
     }
 </div>
