--- a/Practica/Views/ConceptosPago/Edit.cshtml
+++ b/Practica/Views/ConceptosPago/Edit.cshtml
@@ -1,10 +1,10 @@
 ﻿@model Practica.Models.ConceptosPago
 
 @{
-    ViewBag.Title = "Edit";
+    ViewBag.Title = "Edición";
 }
 
-<h2>Edit</h2>
+<h2>Conceptos</h2>
 
 @using (Html.BeginForm())
 {
@@ -33,21 +33,13 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.Tipo, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EnumDropDownListFor(model => model.Tipo, htmlAttributes: new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.Tipo, "", new { @class = "text-danger" })
-            </div>
-        </div>
-        
-        <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Save" class="btn btn-default" />
+                <input type="submit" value="Guardar" class="btn btn-default" />
             </div>
         </div>
     </div>
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Regresar", "Index")
 </div>
