--- a/Practica/Views/ConceptosPago/Index.cshtml
+++ b/Practica/Views/ConceptosPago/Index.cshtml
@@ -4,51 +4,47 @@
     ViewBag.Title = "Conceptos";
 }
 
-<h2>Index</h2>
+<h2>Conceptos</h2>
 
 <p>
-    @Html.ActionLink("Create New", "Create")
+    @Html.ActionLink("Nuevo concepto de pago", "Create")
 </p>
 <table id="tbIndex" class="table table-striped table-bordered order-column" style="width:100%">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.Concepto)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Descripcion)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Tipo)
-        </th>
-        <th></th>
-    </tr>
+    <thead>
 
-    @foreach (var item in Model)
-    {
         <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Concepto)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Descripcion)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Tipo)
-            </td>
-            <td>
-                @Html.ActionLink("Edit", "Edit", new { id = item.Identificador }) |
-                @Html.ActionLink("Details", "Details", new { id = item.Identificador }) |
-                @Html.ActionLink("Delete", "Delete", new { id = item.Identificador })
-            </td>
+            <th>
+                @Html.DisplayNameFor(model => model.Concepto)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Descripcion)
+            </th>
+            <th></th>
         </tr>
-    }
-
+    </thead>
+    <tbody>
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Concepto)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Descripcion)
+                </td>
+                <td>
+                    @Html.ActionLink("Modificar", "Edit", new { id = item.Identificador }) |
+                    @Html.ActionLink("Eliminar", "Delete", new { id = item.Identificador })
+                </td>
+            </tr>
+        }
+    </tbody>
 </table>
 
 <script>
     $(document).ready(function () {
         $('#tbIndex').DataTable({
-            "order": [[3, "desc"]],
+            "order": [[2, "desc"]],
             "language": {
                 "lengthMenu": "Mostrar _MENU_ registros por página",
                 "zeroRecords": "No se han encontrado resultados - intente de nuevo",
