--- a/Practica/Views/Facturas/Create.cshtml
+++ b/Practica/Views/Facturas/Create.cshtml
@@ -1,10 +1,10 @@
 ﻿@model Practica.Models.Factura
 
 @{
-    ViewBag.Title = "Create";
+    ViewBag.Title = "Facturas";
 }
 
-<h2>Create</h2>
+<h2>Factura</h2>
 
 @using (Html.BeginForm()) 
 {
@@ -18,7 +18,7 @@
             @Html.LabelFor(model => model.Identificador, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.Identificador, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Identificador, "", new { @class = "text-danger" })
+                @Html.ValidationMessageFor(model => model.Identificador, "", new { @class = "text-danger", @autocomplete = "off" })
             </div>
         </div>
 
@@ -33,7 +33,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Fecha, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Fecha, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.Fecha, new { htmlAttributes = new { @class = "form-control", @disabled="true",  @placeholder = DateTime.Now.ToShortDateString() + " " +DateTime.Now.ToShortTimeString() } })
                 @Html.ValidationMessageFor(model => model.Fecha, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -41,12 +41,12 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="submit" value="Guardar" class="btn btn-default" />
             </div>
         </div>
     </div>
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Regresar", "Index")
 </div>
