--- a/Practica/Views/Facturas/Delete.cshtml
+++ b/Practica/Views/Facturas/Delete.cshtml
@@ -1,12 +1,11 @@
 ﻿@model Practica.Models.Factura
 
 @{
-    ViewBag.Title = "Delete";
+    ViewBag.Title = "Eliminar";
 }
 
-<h2>Delete</h2>
+<h2>Factura</h2>
 
-<h3>Are you sure you want to delete this?</h3>
 <div>
     <h4>Factura</h4>
     <hr />
@@ -31,15 +30,14 @@
             @Html.DisplayNameFor(model => model.Eliminado)
         </dt>
 
-
     </dl>
 
     @using (Html.BeginForm()) {
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
+            <input type="submit" value="Eliminar" class="btn btn-default" onclick="return confirm('¿Está seguro que desea eliminar este registro?')"/> |
+            @Html.ActionLink("Regresar", "Index")
         </div>
     }
 </div>
