--- a/Practica/Views/Facturas/Details.cshtml
+++ b/Practica/Views/Facturas/Details.cshtml
@@ -1,10 +1,10 @@
 ﻿@model Practica.Models.Factura
 
 @{
-    ViewBag.Title = "Details";
+    ViewBag.Title = "Detalles";
 }
 
-<h2>Details</h2>
+<h2>Detalles</h2>
 
 <div>
     <h4>Factura</h4>
@@ -30,6 +30,6 @@
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.Identificador }) |
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Modificar", "Edit", new { id = Model.Identificador }) |
+    @Html.ActionLink("Regresar", "Index")
 </p>
