--- a/Practica/Views/Facturas/Edit.cshtml
+++ b/Practica/Views/Facturas/Edit.cshtml
@@ -1,10 +1,10 @@
 ﻿@model Practica.Models.Factura
 
 @{
-    ViewBag.Title = "Edit";
+    ViewBag.Title = "Edición";
 }
 
-<h2>Edit</h2>
+<h2>Factura</h2>
 
 @using (Html.BeginForm())
 {
@@ -17,9 +17,9 @@
         @Html.HiddenFor(model => model.Identificador)
 
         <div class="form-group">
-            @Html.LabelFor(model => model.PedidoID, "PedidoID", htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.PedidoID, "Número de pedido", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.DropDownList("PedidoID", null, htmlAttributes: new { @class = "form-control" })
+                @Html.TextBoxFor(model => Model.PedidoID, new { @class = "form-control", @autocomplete = "off" })
                 @Html.ValidationMessageFor(model => model.PedidoID, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -34,12 +34,12 @@
         
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Save" class="btn btn-default" />
+                <input type="submit" value="Guardar" class="btn btn-default" />
             </div>
         </div>
     </div>
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Regresar", "Index")
 </div>
