--- a/Practica/Views/Pagos/Delete.cshtml
+++ b/Practica/Views/Pagos/Delete.cshtml
@@ -1,12 +1,11 @@
 ﻿@model Practica.Models.Pagos
 
 @{
-    ViewBag.Title = "Delete";
+    ViewBag.Title = "Eliminar";
 }
 
-<h2>Delete</h2>
+<h2>Pago</h2>
 
-<h3>Are you sure you want to delete this?</h3>
 <div>
     <h4>Pagos</h4>
     <hr />
@@ -20,11 +19,11 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.TotalPagado)
+            @Html.DisplayNameFor(model => model.TotalPago)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.TotalPagado)
+            @Html.DisplayFor(model => model.TotalPago)
         </dd>
 
         <dt>
@@ -34,6 +33,13 @@
         <dd>
             @Html.DisplayFor(model => model.Descripcion)
         </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.ConceptoDePago)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.ConceptoDePago)
+        </dd>
          
 
     </dl>
@@ -42,8 +48,8 @@
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
+            <input type="submit" value="Eliminar" class="btn btn-default" onclick="return confirm('¿Está seguro que desea eliminar este registro?')" /> |
+            @Html.ActionLink("Regresar", "Index")
         </div>
     }
 </div>
