--- a/Practica/Views/Pagos/Details.cshtml
+++ b/Practica/Views/Pagos/Details.cshtml
@@ -1,10 +1,10 @@
 ﻿@model Practica.Models.Pagos
 
 @{
-    ViewBag.Title = "Details";
+    ViewBag.Title = "Detalles";
 }
 
-<h2>Details</h2>
+<h2>Detalle</h2>
 
 <div>
     <h4>Pagos</h4>
@@ -19,13 +19,20 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.TotalPagado)
+            @Html.DisplayNameFor(model => model.TotalPago)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.TotalPagado)
+            @Html.DisplayFor(model => model.TotalPago)
         </dd>
 
+        <dt>
+            @Html.DisplayNameFor(model => model.Pedido.TotalAPagar)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Pedido.TotalAPagar)
+        </dd>
         <dt>
             @Html.DisplayNameFor(model => model.Descripcion)
         </dt>
@@ -33,11 +40,18 @@
         <dd>
             @Html.DisplayFor(model => model.Descripcion)
         </dd>
-         
+        <dt>
+            @Html.DisplayNameFor(model => model.ConceptoDePago.Concepto)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.ConceptoDePago.Concepto)
+        </dd>
+
 
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.Identificador }) |
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Modificar", "Edit", new { id = Model.Identificador }) |
+    @Html.ActionLink("Regresar", "Index")
 </p>
