--- a/Practica/Views/Pedidos/Create.cshtml
+++ b/Practica/Views/Pedidos/Create.cshtml
@@ -13,13 +13,6 @@
     <div class="form-horizontal">
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        <div class="form-group">
-            @Html.LabelFor(model => model.Concepto, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Concepto, new { htmlAttributes = new { @class = "form-control", @autocomplete = "off" } })
-                @Html.ValidationMessageFor(model => model.Concepto, "", new { @class = "text-danger" })
-            </div>
-        </div>
 
         <div class="form-group">
             @Html.LabelFor(model => model.ClienteID, "Cliente", htmlAttributes: new { @class = "control-label col-md-2" })
@@ -36,7 +29,13 @@
                 @Html.ValidationMessageFor(x => x.ClienteID, null, new { @class = "text-danger" })
             </div>
         </div>
-
+        <div class="form-group">
+            @Html.LabelFor(model => model.Concepto, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.Concepto, new { htmlAttributes = new { @class = "form-control", @autocomplete = "off" } })
+                @Html.ValidationMessageFor(model => model.Concepto, "", new { @class = "text-danger" })
+            </div>
+        </div>
         <div class="form-group">
             @Html.LabelFor(model => model.TipoBien, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
@@ -44,18 +43,23 @@
                 @Html.ValidationMessageFor(model => model.TipoBien, "", new { @class = "text-danger" })
             </div>
         </div>
-
         <div class="form-group">
-            @Html.LabelFor(model => model.ConceptoPagoID, "Tipo de pago", htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.TotalAPagar, "Total a pagar", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.DropDownList("ConceptoPagoID", null, htmlAttributes: new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.ConceptoPagoID, "", new { @class = "text-danger" })
+                @Html.TextBoxFor(model => model.TotalAPagar, htmlAttributes: new { @class = "form-control", @autocomplete = "off" })
+                @Html.ValidationMessageFor(model => model.TotalAPagar, "", new { @class = "text-danger" })
             </div>
         </div>
-        @Html.ValidationMessage("GEN_ERROR", new { @class = "text-danger" })
+        <div class="form-group">
+            @Html.LabelFor(model => model.FechaPago, "Fecha de pago", htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.TextBoxFor(model => model.FechaPago, null, htmlAttributes: new { @class = "form-control", @type = "date" })
+                @Html.ValidationMessageFor(model => model.FechaPago, "", new { @class = "text-danger" })
+            </div>
+        </div>
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="submit" value="Guardar" class="btn btn-default" />
             </div>
         </div>
     </div>
