--- a/Practica/Views/Pedidos/Delete.cshtml
+++ b/Practica/Views/Pedidos/Delete.cshtml
@@ -1,12 +1,11 @@
 ﻿@model Practica.Models.Pedido
 
 @{
-    ViewBag.Title = "Delete";
+    ViewBag.Title = "Eliminar";
 }
 
 <h2>Eliminar pedido</h2>
 
-<h3>Are you sure you want to delete this?</h3>
 <div>
     <h4>Pedido</h4>
     <hr />
@@ -18,15 +17,7 @@
         <dd>
             @Html.DisplayFor(model => model.Cliente.Nombre_cliente)
         </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.TipoDePago.Concepto)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.TipoDePago.Concepto)
-        </dd>
-
+        
         <dt>
             @Html.DisplayNameFor(model => model.Concepto)
         </dt>
@@ -42,6 +33,13 @@
         <dd>
             @Html.DisplayFor(model => model.TipoBien)
         </dd>
+         <dt>
+            @Html.DisplayNameFor(model => model.TotalAPagar)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.TotalAPagar)
+        </dd>
          
     </dl>
 
@@ -49,8 +47,8 @@
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
+            <input type="submit" value="Eliminar" class="btn btn-default"  onclick="return confirm('¿Está seguro que desea eliminar este registro?')"/> |
+            @Html.ActionLink("Regresar", "Index")
         </div>
     }
 </div>
