--- a/Practica/Views/Shared/_Layout.cshtml
+++ b/Practica/Views/Shared/_Layout.cshtml
@@ -30,9 +30,9 @@
                             <span class="caret"></span>
                         </a>
                         <ul class="dropdown-menu">
-                            <li>@Html.ActionLink("Factura", "Index", "Facturas")</li>
-                            <li>@Html.ActionLink("Lista de clientes", "Index", "Clientes")</li>
-                            <li>@Html.ActionLink("Registrar nuevo cliente", "Create", "Clientes")</li>
+                            <li>@Html.ActionLink("Factura", "Index", "Facturas", null, new { @class = "dropdown-item" })</li>
+                            <li>@Html.ActionLink("Lista de clientes", "Index", "Clientes", null, new { @class = "dropdown-item" })</li>
+                            <li>@Html.ActionLink("Registrar nuevo cliente", "Create", "Clientes", null, new { @class = "dropdown-item" })</li>
                         </ul>
                     </li>
                     <li class="dropdown">
@@ -41,17 +41,25 @@
                             <span class="caret"></span>
                         </a>
                         <ul class="dropdown-menu">
-                            <li>@Html.ActionLink("Registrar abono", "Create", "Pagos", new { @class = "dropdown-item" })</li>
-                            <li>@Html.ActionLink("Registrar pago", "Create", "Pagos", new { @class = "dropdown-item" })</li>
-                            <li>@Html.ActionLink("Concepto de pago", "Index", "ConceptosPago", new { @class = "dropdown-item" })</li>
+                            <li>@Html.ActionLink("Registrar abono/pago", "Create", "Pagos", null, new { @class = "dropdown-item" })</li>
+                            <li>@Html.ActionLink("Concepto de pago", "Index", "ConceptosPago", null, new { @class = "dropdown-item" })</li>
                         </ul>
                     </li>
-                    <li>@Html.ActionLink("Pedidos", "Index", "Pedidos")</li>
-
+                    <li>
+                        <a class="dropdown-toggle" data-toggle="dropdown" href="#">
+                            Pedidos
+                            <span class="caret"></span>
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li>@Html.ActionLink("Registrar nuevo pedido", "Create", "Pedidos", null, new { @class = "dropdown-item" })</li>
+                            <li>@Html.ActionLink("Lista de pedidos", "Index", "Pedidos", null, new { @class = "dropdown-item" })</li>
+                        </ul>
+                    </li>
+                    <li>@Html.ActionLink("Usuarios", "Index", "Usuarios", null, new { })</li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
 
-                    <li>@Html.ActionLink("Salir", "CerrarSesion", "Usuarios")</li>
+                    <li>@Html.ActionLink("Salir", "CerrarSesion", "Usuarios", null, new { })</li>
                 </ul>
             </div>
         </div>
