--- a/Practica/Views/Usuarios/Delete.cshtml
+++ b/Practica/Views/Usuarios/Delete.cshtml
@@ -1,12 +1,12 @@
 ﻿@model Practica.Models.Usuario
 
 @{
-    ViewBag.Title = "Delete";
+    ViewBag.Title = "Eliminar";
 }
 
-<h2>Delete</h2>
+<h2>Usuario</h2>
 
-<h3>Are you sure you want to delete this?</h3>
+
 <div>
     <h4>Usuario</h4>
     <hr />
@@ -34,8 +34,8 @@
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
+            <input type="submit" value="Eliminar" class="btn btn-default" onclick="return confirm('¿Está seguro que desea eliminar este registro?')" /> |
+            @Html.ActionLink("Regresar", "Index")
         </div>
     }
 </div>
