--- a/Practica/Views/Usuarios/Index.cshtml
+++ b/Practica/Views/Usuarios/Index.cshtml
@@ -7,33 +7,51 @@
 <h2>Usuarios</h2>
 
 <p>
-    @Html.ActionLink("Create New", "Create")
+    @Html.ActionLink("Crear nuevo", "Create")
 </p>
-<table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.Nombre_usuario)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Contraseña)
-        </th> 
-        <th></th>
-    </tr>
-
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.Nombre_usuario)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Contraseña)
-        </td> 
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.Identificador }) |
-            @Html.ActionLink("Details", "Details", new { id=item.Identificador }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.Identificador })
-        </td>
-    </tr>
-}
-
+<table id="tbIndex" class="table table-striped table-bordered order-column" style="width:100%">
+    <thead>
+        <tr>
+            <th>
+                @Html.DisplayNameFor(model => model.Nombre_usuario)
+            </th>
+            <th></th>
+        </tr>
+    </thead>
+    <tbody>
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Nombre_usuario)
+                </td>
+                <td>
+                    @Html.ActionLink("Modificar", "Edit", new { id = item.Identificador }) |
+                    @Html.ActionLink("Eliminar", "Delete", new { id = item.Identificador })
+                </td>
+            </tr>
+        }
+    </tbody>
 </table>
+
+<script>
+    $(document).ready(function () {
+        $('#tbIndex').DataTable({
+            "order": [[1, "desc"]],
+            "language": {
+                "lengthMenu": "Mostrar _MENU_ registros por página",
+                "zeroRecords": "No se han encontrado resultados - intente de nuevo",
+                "info": "Mostrando página _PAGE_ de _PAGES_",
+                "infoEmpty": "No hay registros",
+                "infoFiltered": "(Filtrados de _MAX_ registros totales)",
+                "search": "Búsqueda",
+                "paginate": {
+                    "first": "Primero",
+                    "last": "Último",
+                    "next": "Siguiente",
+                    "previous": "Anterior"
+                }
+            }
+        });
+    });
+</script>
